examples/10-argocd/rendered-dir/argocd-application-controller/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/managed-by: ktpl
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
  annotations:
    ktpl.io/rendered: '{"metadata.labels[''app.kubernetes.io/version'']":1,"spec.replicas":1,"spec.template.metadata.annotations.checksum/cmd-params":2,"spec.template.metadata.annotations.checksum/cm":2,"spec.template.metadata.labels[''app.kubernetes.io/version'']":1,"spec.template.spec.containers[0].image":2,"spec.template.spec.containers[0].imagePullPolicy":1,"spec.template.spec.containers[0].env[1].value":2}'
spec:
  replicas: 1
  revisionHistoryLimit: 5
  serviceName: argocd-application-controller
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
      app.kubernetes.io/instance: argocd
  template:
    metadata:
      annotations:
        checksum/cmd-params: db68b8d9b50dfbaaeb3c42bd0c5f7c6956e604d098bdf5d4c81273f86410b458
        checksum/cm: 57f006e7e67e830627b118ef595a870954ff71c15c941288aa8c2d9399dcd28b
      labels:
        app.kubernetes.io/name: argocd-application-controller
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/component: application-controller
        app.kubernetes.io/managed-by: ktpl
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: v3.5.3
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: argocd-application-controller
      automountServiceAccountToken: true
      containers:
        - args:
            - /usr/local/bin/argocd-application-controller
            - --metrics-port=8082
          image: quay.io/argoproj/argocd:v3.5.3
          imagePullPolicy: IfNotPresent
          name: application-controller
          ports:
            - name: metrics
              containerPort: 8082
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          workingDir: /home/argocd
          volumeMounts:
            - mountPath: /app/config/controller/tls
              name: argocd-repo-server-tls
            - mountPath: /home/argocd
              name: argocd-home
            - name: argocd-cmd-params-cm
              mountPath: /home/argocd/params
            - name: argocd-application-controller-tmp
              mountPath: /tmp
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: argocd-application-controller
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: argocd-home
          emptyDir: {}
        - name: argocd-application-controller-tmp
          emptyDir: {}
        - name: argocd-repo-server-tls
          secret:
            secretName: argocd-repo-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
              - key: ca.crt
                path: ca.crt
        - name: argocd-cmd-params-cm
          configMap:
            optional: true
            name: argocd-cmd-params-cm
            items:
              - key: controller.profile.enabled
                path: profiler.enabled
      dnsPolicy: ClusterFirst
